# certreplace

./: .gitignore  Cargo.toml  README.md  requirements.md
src/: main.rs  model.rs  parse.rs  replace.rs  search.rs
test/mock-certs/: full-chain-replaced.pem  intermediate.pem  leaf.key  root.pem
test/mock-certs-1/: intermediate.key  leaf-replace.pem  root.key
test/mock-certs-2/: full-chain.pem  intermediate.key  intermediate.pem  leaf-replace.pem  leaf.key  root.key  root.pem
test/search/: alice.pem  bob.key  other.md
