[package]
name = "certreplace"
version = "0.1.2"
edition = "2021"
authors = ["Linus <linuskirkwood@gmail.com>"]
description = "CLI tool for replacing x509 certificates and their private keys."
repository = "https://github.com/lirkwood/certreplace"
keywords = ["x509", "ssl", "certificate", "tls"]
categories = ["command-line-utilities", "config", "filesystem", "parsing"]
license = "GPL-3.0-or-later"

[dependencies]
structopt = "0.3.25"
openssl = { version = "0.10.54", features = ["vendored"] }
time = { version ="0.3.17", features = ["formatting"] }
jwalk = "0.6.0"
