[package]
name = "certreplace"
version = "1.0.1"
edition = "2021"
authors = ["Linus <linuskirkwood@gmail.com>"]
description = "CLI tool for replacing x509 certificates and their private keys."
repository = "https://github.com/lirkwood/certreplace"
keywords = ["x509", "ssl", "certificate", "tls"]
categories = ["command-line-utilities", "config", "filesystem", "parsing"]
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
openssl = { version = "0.10.68", features = ["vendored"] }
time = { version ="0.3.17", features = ["formatting"] }
jwalk = "0.6.0"
regex = "1.10.2"
paris = { version = "1.5.15", features = ["macros"] }
anyhow = "1.0.100"

[profile.release]
strip = "debuginfo"
