[package]
name = "certreplace"
version = "1.0.1"
edition = "2021"
authors = ["Linus <linuskirkwood@gmail.com>"]
description = "CLI tool for replacing x509 certificates and their private keys."
repository = "https://github.com/lirkwood/certreplace"
keywords = ["x509", "ssl", "certificate", "tls"]
categories = ["command-line-utilities", "config", "filesystem", "parsing"]
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
time = { version ="0.3", features = ["formatting"] }
jwalk = "0.8"
regex = "1"
paris = { version = "1", features = ["macros"] }
anyhow = "1"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "z"
debug = false
strip = true
incremental = false
panic = "abort"
